--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -1,77 +1,207 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:gravity="center"
+    android:padding="10dp"
+    android:stretchColumns="0"
     tools:context=".ResultActivity">
-
-    <LinearLayout
+    <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <Button android:id="@+id/btnStart"
+        android:gravity="center_horizontal"
+        >
+        <TextView
+            android:id="@+id/text_max_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="시작"/>
-        <Button android:id="@+id/btnStop"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="정지"/>
-    </LinearLayout>
-
-    <ViewFlipper
-        android:id="@+id/flipper"
+            android:textSize="15sp"/>
+    </TableRow>
+    <TableRow
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <ImageView android:id="@+id/img1"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        >
+        <ImageView
+            android:id="@+id/imgv_max"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </TableRow>
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        <TextView
+            android:id="@+id/text1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/r01"/>
-        <ImageView android:id="@+id/img2"
+            android:layout_gravity="center_vertical"
+            android:text="그림1"
+            android:textSize="15sp"/>
+        <RatingBar
+            android:id="@+id/rating_bar1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/r02"/>
-        <ImageView android:id="@+id/img3"
+            android:layout_gravity="right"
+            android:numStars="5"
+            style="?android:attr/ratingBarStyleSmall"/>
+    </TableRow>
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        <TextView
+            android:id="@+id/text2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/r03"/>
-        <ImageView android:id="@+id/img4"
+            android:layout_gravity="center_vertical"
+            android:text="그림2"
+            android:textSize="15sp"/>
+        <RatingBar
+            android:id="@+id/rating_bar2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/r04"/>
-        <ImageView android:id="@+id/img5"
+            android:layout_gravity="right"
+            style="?android:attr/ratingBarStyleSmall"/>
+    </TableRow>
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        <TextView
+            android:id="@+id/text3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/r05"/>
-        <ImageView android:id="@+id/img6"
+            android:layout_gravity="center_vertical"
+            android:text="그림3"
+            android:textSize="15sp"/>
+        <RatingBar
+            android:id="@+id/rating_bar3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/r06"/>
-        <ImageView android:id="@+id/img7"
+            android:layout_gravity="right"
+            style="?android:attr/ratingBarStyleSmall"/>
+    </TableRow>
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        <TextView
+            android:id="@+id/text4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/r07"/>
-        <ImageView android:id="@+id/img8"
+            android:layout_gravity="center_vertical"
+            android:text="그림4"
+            android:textSize="15sp"/>
+        <RatingBar
+            android:id="@+id/rating_bar4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/r08"/>
-        <ImageView android:id="@+id/img9"
+            android:layout_gravity="right"
+            style="?android:attr/ratingBarStyleSmall"/>
+    </TableRow>
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        <TextView
+            android:id="@+id/text5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/r09"/>
-
-    </ViewFlipper>
-</LinearLayout>
+            android:layout_gravity="center_vertical"
+            android:text="그림5"
+            android:textSize="15sp"/>
+        <RatingBar
+            android:id="@+id/rating_bar5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            style="?android:attr/ratingBarStyleSmall"/>
+    </TableRow>
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        <TextView
+            android:id="@+id/text6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="그림6"
+            android:textSize="15sp"/>
+        <RatingBar
+            android:id="@+id/rating_bar6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            style="?android:attr/ratingBarStyleSmall"/>
+    </TableRow>
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        <TextView
+            android:id="@+id/text7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="그림7"
+            android:textSize="15sp"/>
+        <RatingBar
+            android:id="@+id/rating_bar7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            style="?android:attr/ratingBarStyleSmall"/>
+    </TableRow>
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        <TextView
+            android:id="@+id/text8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="그림8"
+            android:textSize="15sp"/>
+        <RatingBar
+            android:id="@+id/rating_bar8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            style="?android:attr/ratingBarStyleSmall"/>
+    </TableRow>
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        <TextView
+            android:id="@+id/text9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="그림9"
+            android:textSize="15sp"/>
+        <RatingBar
+            android:id="@+id/rating_bar9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            style="?android:attr/ratingBarStyleSmall"/>
+    </TableRow>
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        <Button
+            android:id="@+id/btn_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_span="2"
+            android:text="돌아가기"
+            android:textSize="15sp"/>
+    </TableRow>
+</TableLayout>
